// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform mixins 1`] = `
"import { styles } from 'emotion';

function adExact(width, height) {
  return styles\`
    width: \${width};
    height: \${height};
  \`;
}

export const bar = styles\`
  \${adExact('125px', '700px')};
  color: blue;
\`;
"
`;

exports[`transform nested class no vars 1`] = `
"import { styles } from 'emotion';

export const button = styles\`
  display: flex;
  align-items: center;
  justify-content: center;
  display: block;
\`;

export const foo = styles\`
  display: block;
\`;
"
`;

exports[`transform placeholder 1`] = `
"import { styles } from 'emotion';

const messageShared = styles\`
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
\`;

export const message = styles\`
  \${messageShared};
\`;

export const success = styles\`
  \${messageShared};
  border-color: green;
\`;
"
`;

exports[`transform sass vars to import 1`] = `
"import { styles } from 'emotion';
import { variables } from '@domain-group/fe-brary';

export const button = styles\`
  color: \${variables.colour.primaryDark};
  font-size: \${variables.font.h6FontSize};
\`;

export const bar = styles\`
  font-size: \${variables.font.h6FontSize};
\`;
"
`;

exports[`transform simple class no vars 1`] = `
"import { styles } from 'emotion';

export const button = styles\`
  display: inline-flex;
  align-items: center;
  justify-content: center;
\`;
"
`;
